made contact page

--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
                 <!-- Left side items go here -->
             </div>
             <ul class="right-items">
-                <li class="active"><a href="#home">Home</a></li>
+                <li class="active"><a href="index.html">Home</a></li>
                 <li><a href="about.html">About</a></li>
                 <li><a href="#projects">Projects</a></li>
-                <li><a href="#contact">Contact</a></li>
+                <li><a href="contact.html">Contact</a></li>
             </ul>
             <div class="theme-toggle">
                 <input type="checkbox" id="theme-toggle-btn">
@@ -42,7 +42,7 @@
 
     <!-- Contact tab button -->
     <div class="contact-button">
-        <a href="#contact">Contact Me</a>
+        <a href="contact.html">Contact Me</a>
     </div>
 
     <!-- Learn more link -->
@@ -54,8 +54,6 @@
     <footer class="footer">
         <p>•ᴗ•&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Made with love ❤️ by Yashika&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;•ᴗ•</p>
     </footer>
-
-
 
     <script src="script.js"></script>
 </body>
